--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^3.4.1",
+    "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-sass": "^4.5.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.1",
