--- a/package.json
+++ b/package.json
@@ -15,11 +15,23 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.4.1",
+    "@sideway/address": "^4.1.2",
+    "gatsby": "^3.6.1",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
-    "gatsby-plugin-sass": "^4.5.0",
+    "gatsby-plugin-sass": "^4.6.0",
+    "joi": "^17.4.0",
     "node-sass": "^6.0.0",
+    "postcss": "^8.3.0",
+    "postcss-reporter": "^7.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.34.0",
+    "trim": "^1.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.27.0"
   }
 }
