--- a/package.json
+++ b/package.json
@@ -1,37 +1,32 @@
 {
-  "name": "roberto-jacobo-portfolio",
-  "version": "1.0.0",
+  "name": "gatsby-starter-hello-world",
   "private": true,
-  "description": "Roberto Jacobo Portfolio",
-  "author": "Roberto Jacobo",
-  "keywords": [
-    "gatsby"
-  ],
+  "description": "A simplified bare-bones starter for Gatsby",
+  "version": "0.1.0",
+  "license": "0BSD",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
     "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@sideway/address": "^4.1.2",
-    "gatsby": "^3.6.1",
+    "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
-    "gatsby-plugin-sass": "^4.6.0",
-    "joi": "^17.4.0",
-    "node-sass": "^6.0.0",
-    "postcss": "^8.3.0",
-    "postcss-reporter": "^7.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.34.0",
-    "trim": "^1.0.1"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/eslint-parser": "^7.14.4",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.27.0"
+    "prettier": "2.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
