--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^3.6.2",
-    "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "bootstrap": "^5.1.3",
+    "gatsby": "^2.19.38",
+    "gatsby-link": "^4.2.0",
+    "gatsby-plugin-gatsby-cloud": "^1.0.2",
+    "gatsby-react-router-scroll": "^5.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.2"
